change to stirling colours

--- a/clean.scss
+++ b/clean.scss
@@ -3,8 +3,8 @@
 // Custom colours and variables
 
 $jet: #131516;
-$accent: #107895;
-$accent2: #9a2515;
+$accent: #006938;
+$accent2: #77BF22;
 // $accent2: #e64173;
 $right-arrow: "\2192"; // Unicode character for right arrow
 
