mostly aesthetic updates

--- a/clean.scss
+++ b/clean.scss
@@ -230,8 +230,8 @@ $body-bg: #fdf6e3;
 }
 
 .button:hover {
-  background-color: #0056b3;
-  border-color: #0056b3;
+  background-color: #006938;
+  border-color: #006938;
 }
 
 .button::before {
